--- a/AzureDemo/appsettings.json
+++ b/AzureDemo/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PasswordLockerContext": ""
+    "PasswordLockerContext2": "Server=tcp:r893342-w11.database.windows.net,1433;Initial Catalog=PasswordLocker;Persist Security Info=False;User ID=rohan;Password=bad098jhkC;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=60;"
   }
   }
